<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SMedia</string>
   	<string name="str_btn_local">Local</string>
    <string name="str_btn_usb">USB</string>
    <string name="str_btn_aux">AUX</string>
    <string name="str_loading">Loading...</string>
    <string name="str_btn_btmusic">BtMusic</string>
    <string name="str_media_type">Please Choice Media Type</string>
    <string name="str_local_music">1.LocalMusic</string>
    <string name="str_local_video">2.LocalVideo</string>
    <string name="str_local_photo">3.LocalPhoto</string>
    <string name="str_usb_music">1.USBMusic</string>
    <string name="str_usb_video">2.USBVideo</string>
    <string name="str_usb_photo">3.USBPhoto</string>
    <string name="str_btn_music_list">MusicList</string>
    <string name="str_btn_music_prev">prev</string>
    <string name="str_btn_music_next">next</string>
    <string name="str_btn_music_mode">CirclePlay</string>
    <string name="str_btn_video_list">VideoList</string>
    <string name="str_btn_video_prev">prev</string>
    <string name="str_btn_video_next">next</string>
    <string name="str_btn_video_mode">CirclePlay</string>
    <string name="str_btn_photo_list">PhotoList</string>
    <string name="media_title">UnknownTitle</string>
    <string name="media_artist">UnknownArtist</string>
    <string name="media_album">UnknownAlbum</string>
    <string name="str_btn_bt_device">BtDevice</string>
    <string name="widget_name" translatable="false">VLC mini player</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="append">Append</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="beta_warning">This is a beta version.\n\nThis version is NOT STABLE!\n\nDo NOT use, unless you know what you are doing.\n\nIt might kill your kitten and destroy your house.\nUse it at your own risk.\n\nHave Fun! :)</string>
    <string name="info_title">VLC Beta</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">The directory path \'%1$s\' was not found.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat none/single/all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_horizontal">Fit horizontal</string>
    <string name="surface_fit_vertical">Fit vertical</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitles track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
    <string name="track_framerate_info">Frame rate: %1$.3f\n</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="subtitle_select">Select subtitle file</string>
    <string name="no_file_picker_found">No file picker was found on the system.</string>
    <string name="open">Open</string>
    <string name="open_mrl">Open MRL</string>
    <string name="open_mrl_dialog_title">Open network stream</string>
    <string name="open_mrl_dialog_msg">Enter network MRL: e.g. http://, mms:// or rtsp://</string>
    <string name="error_not_compatible">Sorry, your device is currently not supported by this version of VLC for Android™.</string>
    <string name="error_problem">Sorry, VLC for Android had a problem loading and had to close.</string>
    <string name="error_message_is">The error message is (please mention this when debugging):\n</string>
    <string name="empty" translatable="false"></string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="speed_placeholder" translatable="false">1.00x</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="colon" translatable="false">:</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">&#8722;</string>
    <string name="encountered_error_title">Playback error</string>
    <string name="encountered_error_message">VLC encountered an error with this media.\nPlease try refreshing the media library.</string>
    <string name="invalid_location">The location %1$s cannot be played.</string>
    <string name="search">Search</string>
    <string name="search_history">Search history</string>
    <string name="hardware_acceleration_error_title">HW acceleration error</string>
    <string name="hardware_acceleration_error_message">An error occurred with hardware acceleration. Would you like to disable it and try again?</string>
    <string name="video_player_tips">Video player tips:</string>
    <string name="seek">Seek</string>
    <string name="subtitles">Subtitles</string>
    <string name="resize">Resize</string>
    <string name="options">Options</string>
    <string name="lock">Lock</string>
    <string name="ok_got_it">Got it, dismiss this</string>
    <string name="playlist_tips">Playlist tips</string>
    <string name="remove_song">Remove song</string>
    <string name="rearrange_order">Rearrange order</string>
    <string name="hold_to_seek">Hold to seek</string>
    <string name="audio_player_tips">Audio player tips</string>
    <string name="previous_next_song">Previous/Next song</string>
    <string name="show_playlist">Show playlist</string>
    <string name="hold_to_stop">Hold to stop</string>
    <string name="app_name_full">VLC for Android™</string>
    <string name="licence">License</string>
    <string name="revision">Revision</string>
    <string name="about">About</string>
    <string name="about_text">VLC for Android™ is a port of VLC media player, the popular open source media player. The Android™ version can read most files and network streams.</string>
    <string name="compiled_by">This version of VLC is compiled by:</string>
    <string name="vlc_authors">VLC Authors.</string>
    <string name="about_link" translatable="false">        &lt;a href=&quot;http://www.videolan.org/vlc/&quot;&gt;http://www.videolan.org/vlc/&lt;/a&gt;</string>
    <string name="about_copyright" translatable="false">Copyleft &#169; 1996&#8211;2014 by VideoLAN.\n</string>
    <string name="authors" translatable="false">Edward&#160;Wang, Sébastien&#160;Toque, Adrien&#160;Maglo, Jean-Baptiste&#160;Kempf, Ludovic&#160;Fauvet, Rafaël&#160;Carré, Alexandre&#160;Perraud, Michael&#160;Merg, Martin&#160;Storsjö, Rémi&#160;Duraffort, Dominique&#160;Martinet, Jean-Philippe&#160;André, Felix&#160;Abecassis, Christoph&#160;Miebach, Hugo&#160;Beauzée-Luyssen, Felix&#160;Paul&#160;Kühne, John&#160;Mooring, Pavol&#160;Rusnak, Rohit&#160;Yadav, Tanguy&#160;Pruvot, Thomas&#160;Clavier, Asad&#160;Mehmood, Garret&#160;Kelly, Philipp&#160;Dreimann, Walter&#160;Heck.</string>
    <string name="preferences">Preferences</string>
    <string name="general_prefs_category">General</string>
    <string name="directories_summary">Select directories to include in the media library</string>
    <string name="add_custom_path">Add a custom path</string>
</resources>