<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bk"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fm"
        android:layout_width="match_parent"
        android:layout_height="380dp">
    </FrameLayout>

    <LinearLayout
        android:layout_width="994dp"
        android:layout_height="95dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="120dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_local"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_local"
                android:text="@string/str_btn_local"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="130dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_usb"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_usb"
                android:text="@string/str_btn_usb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="130dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_aux"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_aux"
                android:text="@string/str_btn_aux" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="130dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_btmusic"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_btmusic"
                android:text="@string/str_btn_btmusic" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>