<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:background="@drawable/setting_bk" >
	
    <ImageView
        android:id="@+id/btn_eq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_eq" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="15dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
       	android:text="音效" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/music_bk" />

    <ImageView
        android:layout_width="201dp"
        android:layout_height="180dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/music_photo" />

    <ImageView
        android:id="@+id/album_photo"
        android:layout_width="200dp"
        android:layout_height="182dp"
        android:layout_marginLeft="469dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/ic_musiclogo" />

    <TextView
        android:id="@+id/music_ctime" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:layout_marginLeft="10dp"
        android:text="@string/default_duration_time"
        style="@style/TextViewTheme" />
	
    <TextView
        android:id="@+id/music_ttime" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:layout_marginLeft="912dp"
        style="@style/TextViewTheme"
        android:text="@string/default_duration_time" />
    <SeekBar
        android:id="@+id/music_seekbar"
        android:layout_width="800dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="360dp"
        android:max="1000"
        android:maxHeight="20dp"
        android:minHeight="20dp"
        android:progressDrawable="@xml/seekbar_img"
        android:thumb="@null" >
    </SeekBar>

    <org.videolan.vlc.util.MarqueeTextView
        android:id="@+id/music_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="700dp"
        android:layout_marginTop="120dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/media_title"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <org.videolan.vlc.util.MarqueeTextView
        android:id="@+id/music_artist"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="700dp"
        android:layout_marginTop="170dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/media_artist"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <org.videolan.vlc.util.MarqueeTextView
        android:id="@+id/music_album"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="700dp"
        android:layout_marginTop="220dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/media_album"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="994dp"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="425dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="65dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_music_list"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_music_list"
                android:layout_marginTop="5dp"
                android:text="@string/str_btn_music_list" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="95dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_music_prev"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_music_prev"
                android:layout_marginTop="5dp"
                android:text="@string/str_btn_music_prev" />
        </LinearLayout>
		
        <ImageButton 
            android:id="@+id/btn_music_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
			android:layout_marginTop="-5dp"
            android:layout_gravity="center|top"
            android:background="@drawable/btn_music_play"/>
        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="95dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_music_next"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_music_next"
                android:layout_marginTop="5dp"
                android:text="@string/str_btn_music_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="95dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_music_mode"
                style="@style/BottomBarBtnTheme"
                android:drawableTop="@drawable/btn_music_circle"
                android:layout_marginTop="5dp"
                android:text="@string/str_btn_music_mode" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>